<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#3F3F3F" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Login_header"
            android:id="@+id/textView"
            android:gravity="center"
            android:textColor="#B4FBBF"
            android:layout_gravity="center"
            android:textSize="50dp"
            android:layout_weight="0.08" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/login_baseline"
            android:id="@+id/textView2"
            android:gravity="center"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.01" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/userhint"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_weight="0.25" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:inputType="textPassword"
            android:hint="@string/passhint"
            android:ems="10"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:id="@+id/editText2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:text="@string/but1"
            android:id="@+id/button"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/mybutton"
            android:layout_weight="0.31" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/frgt"
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.18" />

    </LinearLayout>
</RelativeLayout>
